# drought_classification

./: .gitignore  LICENSE  README.md  setup.cfg
scripts/: main.py  plots.py  tmp-hpo-call-keras.py  train_on_config.py  utils.py
src/drought_prediction/: __init__.py  cli.py  data.py  hpo.py  util.py
