##########################
# Setup.py Configuration #
##########################
# Configuring setup()

[metadata]
name = drought-prediction
version = 0.0.1-dev

[options]
install_requires =
    numpy # why? <= 1.18.5
    netcdf4  # required for opening raw input files
    pandas # xarray dependency
    xarray[complete] #http://xarray.pydata.org/en/stable/getting-started-guide/installing.html 
    scipy
    sklearn
    matplotlib
    seaborn
    pystow  # storing data for packages
    tables  # storing pandas tables in HDF
    ray[tune]  # hpo
    cdsapi  # for downloading data
    class-resolver>=0.0.6  # for resolving choices
    tensorflow

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
test =
    flake8
    flake8-import-order
    flake8-commas
    mypy
    pytest
    pytest-cov
tfcpu =
    tensorflow~=2.2.0
tfgpu =
    tensorflow-gpu~=2.2.0
mlflow =
    mlflow

[options.entry_points]
console_scripts =
    drought = drought_prediction.cli:main


#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
ignore =
# line too long
    E501
# Line break occurred before / after a binary operator, cf. https://www.flake8rules.com/rules/W504.html
    W504 W503
# not shown in vscode as error:
    C812 C815 E203 C819 I202





import-order-style = pycharm

##########################
# mypy Configuration     #
##########################
[mypy]

[mypy-cdsapi]
ignore_missing_imports = True

[mypy-class_resolver]
ignore_missing_imports = True

[mypy-joblib]
ignore_missing_imports = True

[mypy-numpy]
ignore_missing_imports = True

[mypy-pandas]
ignore_missing_imports = True

[mypy-pystow]
ignore_missing_imports = True

[mypy-ray]
ignore_missing_imports = True

[mypy-ray.tune.sample]
ignore_missing_imports = True

[mypy-ray.tune.integration.mlflow]
ignore_missing_imports = True

[mypy-ray.tune.trial]
ignore_missing_imports = True

[mypy-ray.tune.utils]
ignore_missing_imports = True

[mypy-sklearn]
ignore_missing_imports = True

[mypy-sklearn.base]
ignore_missing_imports = True

[mypy-sklearn.ensemble]
ignore_missing_imports = True

[mypy-sklearn.metrics]
ignore_missing_imports = True

[mypy-sklearn.model_selection]
ignore_missing_imports = True

[mypy-sklearn.neighbors]
ignore_missing_imports = True

[mypy-sklearn.neural_network]
ignore_missing_imports = True

[mypy-sklearn.preprocessing]
ignore_missing_imports = True

[mypy-sklearn.svm]
ignore_missing_imports = True

[mypy-tensorflow]
ignore_missing_imports = True


########################
# Pytest Configuration #
# (pytest.ini)         #
########################
[tool:pytest]
addopts = --strict-markers
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    authentication: marks tests as requiring authentication (deselect with '-m "not authentication"')
